<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:paddingBottom="6dp"
    android:paddingTop="8dp"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_fx"
        android:onClick="onBottomNavClick"
        >
        <ImageView
            android:id="@+id/nav_fx_imageview"
            android:src="@drawable/fx_choosed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/nav_fx_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/fx"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/full_screen"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_zb"
        android:onClick="onBottomNavClick"
        >
        <ImageView
            android:id="@+id/nav_zb_imageview"
            android:src="@drawable/zb_not_choosed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/nav_zb_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/zb"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/item_not_choosed"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_cur"
        android:onClick="onBottomNavClick"
        >
        <ImageView
            android:id="@+id/nav_cur_imageview"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_kg"
        android:onClick="onBottomNavClick"
        >
        <ImageView
            android:id="@+id/nav_kg_imageview"
            android:src="@drawable/kg_not_choosed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/nav_kg_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/kg"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/item_not_choosed"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_wd"
        android:onClick="onBottomNavClick"
        >
        <ImageView
            android:id="@+id/nav_wd_imageview"
            android:src="@drawable/wd_not_choosed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/nav_wd_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/wd"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/item_not_choosed"
            />
    </LinearLayout>

</LinearLayout>